Clean up animation on scroll, fix flickering

--- a/src/Components/AnimateOnScroll/AnimateOnScroll.css
+++ b/src/Components/AnimateOnScroll/AnimateOnScroll.css
@@ -1,13 +1,18 @@
 .animate-on-scroll-container {
-    opacity: 0;
-    transform: translateY(10vh);
-    visibility: hidden;
-    will-change: opacity, visibility;
-    transition: opacity 0.5s ease-out, transform 1s ease-out;
+    transition: opacity 0.35s ease-out, transform 0.6s ease-out;
 }
 
-.animate-on-scroll-container.animate-on-scroll-container-visible {
+.animate-on-scroll-container-invis-below {
+    opacity: 0;
+    transform: translateY(-20%);
+}
+
+.animate-on-scroll-container-invis-above {
+    opacity: 0;
+    transform: translateY(20%);
+}
+
+.animate-on-scroll-container-visible {
     opacity: 1;
     transform: none;
-    visibility: visible;
 }
